--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "16.x" 
+  },
   "author": "Jay Patel",
   "license": "ISC",
   "description": "",
