--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,16 +1,16 @@
 {
-  "version": 2,
-  "functions": {
-    "api/mobiles.js": {
-      "memory": 1024,
-      "maxDuration": 10,
-      "runtime": "nodejs16.x" 
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/mobiles/(.*)",   
-      "dest": "/api/mobiles.js"     
-    }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "server.js", 
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "server.js" 
+      }
+    ]
+  }
+  
